--- a/src/email/templates/agency-created.html
+++ b/src/email/templates/agency-created.html
@@ -55,21 +55,21 @@
         }
         .info-item {
             background-color: #f5f5f5;
-            padding: 30px;
+            padding: 20px;
             border-radius: 10px;
             width: 300px;
-            text-align: center;
+            text-align: left;
             align-content: center;
             white-space: nowrap;
         }
         .info-label {
             font-weight: bold;
             color: #333333;
-            font-size: 20px;
+            font-size: 16px;
         }
         .info-value {
             color: #666666;
-            font-size: 18px;
+            font-size: 16px;
         }
         .nowrap {
             white-space: nowrap;
@@ -77,7 +77,7 @@
         .footer {
             background-color: #F7B93C;
             color: #ffffff;
-            padding: 60px;
+            padding: 20px;
             text-align: center;
             position: relative;
         }
@@ -87,7 +87,7 @@
             top: -50px;
             left: 0;
             right: 0;
-            height: 100px;
+            height: 60px;
             background-color: #F7B93C;
             border-radius: 50% 50% 0 0 / 100% 100% 0 0;
             transform: scaleX(1.5);
@@ -95,6 +95,7 @@
         .footer p {
             margin: 0;
             font-size: 20px;
+            padding-bottom: 40px;
         }
     </style>
 </head>
@@ -110,15 +111,15 @@
         <p>Congratulations! <strong>{{agencyName}}</strong> has been added to <strong>{{organisationName}}</strong> by <strong><span class="nowrap">{{managerFirstName}} {{managerLastName}}</span></strong>.</p>
         <div class="agency-info">
             <div class="info-item">
-                <span class="info-label">Country</span>
+                <span class="info-label">Country:</span>
                 <span class="info-value">{{country}}</span>
             </div>
             <div class="info-item">
-                <span class="info-label">Sector</span>
+                <span class="info-label">Sector:</span>
                 <span class="info-value">{{sector}}</span>
             </div>
             <div class="info-item">
-                <span class="info-label">Commission</span>
+                <span class="info-label">Commission:</span>
                 <span class="info-value">{{commissionPercentage}}%</span>
             </div>
         </div>
