added dummy logo

--- a/src/email/templates/agency-created.html
+++ b/src/email/templates/agency-created.html
@@ -102,7 +102,7 @@
 <body>
 <div class="container">
     <div class="image">
-    <img src="https://picsum.photos/200/200?grayscale" alt="FLOW Company Logo" style="display: block; margin: 0 auto; max-width: 200px;">
+    <img src="../../../images/flow.jpeg" alt="FLOW Company Logo" style="display: block; margin: 0 auto; max-width: 200px;">
     </div>
         <div class="header">
         <h1>New Agency Added</h1>
